home header update

--- a/oddaj-rzeczy/src/scss/main.scss
+++ b/oddaj-rzeczy/src/scss/main.scss
@@ -1,15 +1,42 @@
-@import "./settings/fonts";
-@import "./settings/colors";
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
 @import "../../node_modules/reset-css/";
+@import "../scss/settings/colors";
+@import "../scss/settings/fonts";
+@import "../scss/home";
+
 
 
 body {
     font-family: $font-open-sans;
-}
-
-* a {
-   
-    text-decoration: none;
-  }
-  
+    .container{
+        width: 100%;
+      }
+      .flex{
+        display: flex;
+        justify-content: space-between;
+      }
+      .flex-col-right-top{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+    
+      }
+      .flex-col-right-top__header{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        margin-right: 50px;
+      }
+    
+      div.decoration{
+        width:200px;
+        height: 30px;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        margin-top: 20px;
+      }
+      a, button, input[type=submit]{
+        cursor: pointer;
+      }
+    }
