--- a/oddaj-rzeczy/src/scss/_homeHeader.scss
+++ b/oddaj-rzeczy/src/scss/_homeHeader.scss
@@ -18,6 +18,11 @@
     .button-login:hover,.button-register:hover {
       border: 1px solid $color-yellow;
     }
+    .nav{
+      width: 100%;
+      display: flex;
+      justify-content: flex-end;
+      margin-top: 20px;
    
     a{
       color: $color-gray;
@@ -30,3 +35,4 @@
       border: 1px solid $color-gray;
     }
   }
+}
