--- a/oddaj-rzeczy/src/scss/_home.scss
+++ b/oddaj-rzeczy/src/scss/_home.scss
@@ -1,24 +1,36 @@
 @import "../scss/settings/colors";
 @import "./homeHeader";
+@import "./homeStart";
 
 .top-block{
-    height: 500px;
-    
-    .left-side-container{
-      display: inline-block;
-      width: 70%;
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: bottom;
-      height: inherit;
-    }
-    
-    .right-side-container{
-      display: inline-block;
-      width: 50%;
-      height: inherit;
+  height: 500px;
   
-    }
+  .left-side-container{
+    display: inline-block;
+    width: 70%;
+    background-image: url("../assets/Hero-Image.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    height: inherit;
   }
+  
+  .right-side-container{
+    display: inline-block;
+    width: 50%;
+    height: inherit;
+
+  }
+}
+
+a.white-bttn{
+  color: $color-gray;
+  text-align: center;
+  font-size: 1.3rem;
+  padding: 5px;
+  border: 1px solid $color-gray;
+  width: 150px;
+  margin: 10px;
+}
   
  
