--- a/oddaj-rzeczy/src/scss/_home.scss
+++ b/oddaj-rzeczy/src/scss/_home.scss
@@ -1,6 +1,7 @@
 @import "../scss/settings/colors";
 @import "./homeHeader";
 @import "./homeStart";
+@import "./homeInfo";
 
 .top-block{
   height: 500px;
