--- a/oddaj-rzeczy/src/scss/_homeAbout.scss
+++ b/oddaj-rzeczy/src/scss/_homeAbout.scss
@@ -19,13 +19,13 @@
         font-weight: normal;
       }
       p{
-        font-size: 1.2rem;
+        font-size: 20px;
         line-height: 2rem;
-        width: 400px;
+        width: 350px;
         text-align: center;
       }
       div.signature{
-        width: 400px;
+        width: 300px;
         height: 100px;
         background-image: url("../assets/Signature.svg");
         background-size: contain;
